[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxrpy"
version = "0.2.0"
description = "Python wrapper for the Oxford Response API"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/BLK-TTAUDI/OXRPY"
Repository = "https://github.com/BLK-TTAUDI/OXRPY"